# indiciumforge

./: .gitignore  AGENTS.md  CAPABILITY_REGISTER.md  FACTOR_DEMO_MANIFEST.yaml  FACTOR_GOLDEN_MANIFEST.yaml  GOLDEN_ARTIFACT_TEST_PLAN.md  GOLDEN_MANIFEST.yaml  INDICIUMFORGE_CONSTITUTION.md  LICENSE  LUCERNA_CONSTITUTION.md  MIGRATION_MAP_FROM_INDICIUMGRID.md  README.md  README_CN.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: AGENT_QUICKSTART.md  AGENT_REVIEW_CHECKLIST.md  AGENT_SKILL_ROADMAP.md  AGENT_WORKFLOW.md  CURRENT_STATUS.md  DESIGN_DEFECT_MIGRATION_AUDIT.md  EXTENSION_AUTHOR_GUIDE.md  FACTOR_CORE_INVENTORY.md  FACTOR_GOLDEN_SCENARIO_PLAN.md  FUTURE_SURFACES.md  GLOSSARY.md  INDICIUMFORGE_DOC_MIGRATION_AUDIT.md  LOCAL_FOLDER_RENAME_RUNBOOK.md  LUCERNA_DOC_MIGRATION_AUDIT.md  MIGRATION_ROADMAP.md  NEXT_ACTIONS.md  OPENBB_PUBLIC_DEMO_PLAN.md  PRIVATE_ASHARE_RECIPE_TEMPLATE.md  PRIVATE_DATA_ADAPTER_TEMPLATE.md  PRIVATE_FACTOR_PACK_TEMPLATE.md  PRIVATE_PARITY_HARNESS_TEMPLATE.md  PYPI_RELEASE_CHECKLIST.md  REBRAND.md  SYSTEM_MAP.md  TESTPYPI_RELEASE_RUNBOOK.md  V1_0_DEFINITION.md  WORKFLOW_SESSION_MODEL.md
docs/CONTEXT_PROMPTS/: codex_master_prompt.md  cursor_implementation_prompt.md  review_audit_prompt.md
docs/archive/: MIGRATION_MAP_FROM_INDICIUMGRID.md  README.md
docs/decisions/: ADR-0001-evidence-first.md  (+25 more)
paper/: main.bbl  main.tex  references.bib
scripts/: export_golden_market_gate.py  snapshot_golden_ashare.py  snapshot_openbb_demo.py
tests/: conftest.py
(+185 files in other folders)
