[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indiciumforge-workspace"
version = "2.0.0"
description = "IndiciumForge monorepo workspace."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]
"packages/indiciumforge-cli/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
